@@ -16,6 +16,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
 
 @Service
 public class UniversitySeederService {
@@ -33,12 +34,21 @@ public class UniversitySeederService {
         LogManager.getLogger(this.getClass()).warn("------- University Initial Load -----------");
         ClassroomEntity[] classrooms = {
                 new ClassroomEntity(new Classroom("ETSISI", 1302, 20)),
-                new ClassroomEntity(new Classroom("ETSISI", 3101, 40))
+                new ClassroomEntity(new Classroom("ETSISI", 3101, 40)),
+                new ClassroomEntity(new Classroom("ETSISI", 4302, 30)),
+                new ClassroomEntity(new Classroom("ETSISI", 3004, 10)),
+                new ClassroomEntity(new Classroom("ETSISI", 8002, 15)),
+                new ClassroomEntity(new Classroom("ETSIINF", 9021, 50))
         };
         this.classroomRepository.saveAll(Arrays.asList(classrooms));
         SubjectEntity[] subjects = {
-            new SubjectEntity(613000096, "Arquitectura y Patrones para Aplicaciones Web", 4, classrooms[0]),
-            new SubjectEntity(613000095, "Ingeniería Web: Visión General", 6, classrooms[0])
+                new SubjectEntity(613000096, "Arquitectura y Patrones para Aplicaciones Web", 4, classrooms[0]),
+                new SubjectEntity(613000095, "Ingeniería Web: Visión General", 6, classrooms[0]),
+                new SubjectEntity(615000246, "Inteligencia artificial", 3, classrooms[1]),
+                new SubjectEntity(615000243, "Programación Orientada a Objetos", 6, classrooms[2]),
+                new SubjectEntity(615000225, "Análisis matemático", 6, classrooms[0]),
+                new SubjectEntity(615000232, "Fundamentos de Seguridad", 3, classrooms[0]),
+                new SubjectEntity(105000002, "Lógica", 6, classrooms[5])
         };
         this.subjectRepository.saveAll(Arrays.asList(subjects));
         DegreeEntity[] degrees = {
@@ -48,7 +58,10 @@ public class UniversitySeederService {
         };
         this.degreeRepository.saveAll(Arrays.asList(degrees));
         StudentEntity[] students = {
-            new StudentEntity(new Student("12345678X", "Ada Lovelace", true), Arrays.asList(subjects))
+                new StudentEntity(new Student("12345678X", "Ada Lovelace", true), Arrays.asList(subjects)),
+                new StudentEntity(new Student("112233445E", "Alan Turing", true), List.of(subjects[2], subjects[3])),
+                new StudentEntity(new Student("999999999W", "Bárbara Liskov", false), List.of(subjects[6]))
+
         };
         this.studentRepository.saveAll(Arrays.asList(students));
     }
